2002-04-11  Peter Burwood  <clisp@peterb.org.uk>

	* errunix.d (get_errormsg): prevent EILSEQ shadowing ENOENT

2002-04-10  Sam Steingold  <sds@gnu.org>

	new built-in DELTA4 for metering.lisp optimization
	* time.d (delta4): implemented
	* subr.d, constsym.d (delta4): added
	* defs1.lisp (%time): use DELTA4

2002-04-10  Sam Steingold  <sds@gnu.org>

	* configure: handle --with-no-dynamic-modules
	* makemake.in: uniform handling of --with* arguments

2002-04-05  Joerg-Cyril Hoehle  <Joerg-Cyril.Hoehle@t-systems.com>

	* modules.d (MODULE): silence the compiler warning about
	module__*__init_function_*() prototype
	* modules/regexp/regexi.c: include <stdlib.h> before "regex.h"

2002-04-04  Stefan Kain  <stefan.kain@freenet.de>

	* spvw_ctype.diff, spvw_gcstat.diff, spvw_genera2.diff:
	* spvw_genera3.diff, spvw_page.diff, spvw_sigsegv.diff:
	* spvw_sigwinch.diff, spvwtabf.diff, spvwtabo.diff:
	* spvwtabs.diff: translated all comments

2002-04-04  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 538748 ]: OS_errno lost before error reporting
	* spvw_memfile.d (loadmem): use OS_errno instead of errno

2002-04-02  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (*browsers*): added mozilla and links and various
	`-remote' and `-xterm' variations

2002-04-01  Sam Steingold  <sds@gnu.org>

	Rework the 2002-03-30 patch: use SOCKET-STREAM-SHUTDOWN instead
	of CLOSE :DIRECTION
	* gray.lisp, subrkw.d: reverted CLOSE
	* subr.d, constsym.d: added SOCKET-STREAM-SHUTDOWN
	* stream.d (SOCKET-STREAM-SHUTDOWN): implemented
	(builtin_stream_close_partial): removed
	(built_in_stream_close): reverted

2002-04-01  Sam Steingold  <sds@gnu.org>

	uncouple OPEN-STREAM-P from INPUT-STREAM-P/OUTPUT-STREAM-P
	* lispbibl.d (strmflags_open_bit_B): new bit (0)
	(strmflags_open_B): use it, not the top 4 bits
	(allocate_stream): add it to strmflags
	* spvw_typealloc.d (allocate_stream): ditto
	* stream.d (strmflags_rdwr_B): new mask (top 4 bits)
	(make_synonym_stream, make_twoway_stream, make_echo_stream)